# hj-check-os-version

./: .pyproject.toml.swp  README.md  pyproject.toml
src/hj_check_os_version/: hi.py
tests/: test_first.py
