[project]
name = "hj-check-os-version"
version = "0.3.0"

description = "Default template for PDM package"
authors = [
    {name = "heejin131", email = "journeyjean131@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/heejin131/hhj-check-os-version"
Issues = "https://github.com/heejin131/hj-check-os-version/issues"

[project.scripts]
heejin-hi = "hj_check_os-ver.hi:hi"   